[gd_scene format=3]

[ext_resource type="Script" path="res://scripts/pet/PetBrain.gd" id="1"]
[ext_resource type="Script" path="res://scripts/pet/EmoteController.gd" id="2"]
[ext_resource type="Script" path="res://scripts/pet/SfxController.gd" id="3"]

[node name="PetBase" type="Node3D"]
[node name="Body" type="Node3D" parent="."]
[node name="MeshInstance3D" type="MeshInstance3D" parent="Body"]
[node name="AnimationTree" type="AnimationTree" parent="."]
[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
[node name="InteractArea" type="Area3D" parent="."]
[node name="PetBrain" type="Node" parent="."]
script = ExtResource("1")
[node name="EmoteController" type="Node" parent="."]
script = ExtResource("2")
[node name="SfxController" type="Node" parent="."]
script = ExtResource("3")
